---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/pointers/test_pointer_compatibility_for_pointers_to_arrays_of_unknown_length.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/pointers/test_pointer_compatibility_for_pointers_to_arrays_of_unknown_length.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition xs~2 `array<int; 42>` (braced ∅))
         (definition p~3 `ptr<array<int; ∅>>`
            (addressof `ptr<array<int; 42>>`
               (xs~2 `array<int; 42>`)))
         (definition q~4 `ptr<array<int; 42>>`
            (addressof `ptr<array<int; 42>>`
               (xs~2 `array<int; 42>`)))
         (return (ptr-equal `int` (p~3 `ptr<array<int; ∅>>`) (q~4 `ptr<array<int; 42>>`))))))

----- stderr -----
